# nnfusion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/ngraph/frontend/tensorflow_import/: CMakeLists.txt  tensorflow.cpp  tensorflow.hpp  tensorflow_base.cpp  tensorflow_base.hpp
src/ngraph/runtime/nnfusion/: CMakeLists.txt  nnfusion_backend.cpp  nnfusion_backend.hpp  nnfusion_codegenerator.cpp  nnfusion_codegenerator.hpp  nnfusion_common.hpp  nnfusion_cudacodegen.cpp  nnfusion_cudacodegen.hpp  nnfusion_exceptions.hpp  nnfusion_functiontranslator.cpp  nnfusion_functiontranslator.hpp  nnfusion_languageunit.cpp  nnfusion_languageunit.hpp  nnfusion_op.cpp  nnfusion_op.hpp  nnfusion_rocmcodegen.cpp  nnfusion_rocmcodegen.hpp  nnfusion_tensorwrapper.cpp  nnfusion_tensorwrapper.hpp
src/nnfusion/common/: CMakeLists.txt  common.hpp  device_type.cpp  device_type.hpp  languageunit.cpp  languageunit.hpp  shape.hpp  tensorwrapper.cpp  tensorwrapper.hpp  util.hpp
src/nnfusion/common/descriptor/: tensor.cpp  tensor.hpp
src/nnfusion/common/serialize/: CMakeLists.txt
src/nnfusion/common/type/: element_type.cpp  element_type.hpp
src/nnfusion/core/IR/: CMakeLists.txt  IR.cpp  IR.hpp  attribute.cpp  attribute.hpp  dependency.hpp  instruction.cpp  instruction.hpp  main.cpp  tag.hpp  value.hpp
src/nnfusion/core/graph/: CMakeLists.txt  attr_value.proto  edge.cpp  edge.hpp  gnode.cpp  gnode.hpp  graph.cpp  graph.hpp  graph_def.proto  graph_util.cpp  graph_util.hpp  input.hpp  node.cpp  node.hpp  node_def.proto  node_vector.hpp  output.hpp  tensor_shape.proto
src/nnfusion/core/kernels/: CMakeLists.txt  antares_ke_imp.cpp  antares_ke_imp.hpp  async.hpp  common.hpp  common_langunit.cpp  common_langunit.hpp  kernel_emitter.cpp  kernel_emitter.hpp  kernel_registration.cpp  kernel_registration.hpp  language_unit.cpp  language_unit.hpp  main.cpp  tensor_wrapper.cpp  tensor_wrapper.hpp  tensorwrapper.cpp
src/nnfusion/core/ops/: CMakeLists.txt  generic_op.hpp  op_registration.cpp  op_registration_impl.hpp
src/nnfusion/engine/: CMakeLists.txt  async_manager.cpp  async_manager.hpp  engine.cpp  engine.h  engine.hpp  exceptions.h  interpreter.cpp  interpreter.h  interpreter.hpp  languageunit.cpp  languageunit.h  languageunit.hpp  memory_allocator.cpp  memory_allocator.hpp  op.cpp  op.h  op.hpp  tensorwrapper.cpp  tensorwrapper.h  tensorwrapper.hpp  type_info.cpp  type_info.h
src/nnfusion/engine/cache/: CMakeLists.txt  manager.cpp  manager.hpp
src/nnfusion/engine/device/: CMakeLists.txt  cuda.cpp  cuda.hpp  degree_based_visitor.cpp  degree_based_visitor.hpp  graphcore.cpp  graphcore.hpp  hlsl.cpp  hlsl.hpp  reversed_dfs_visitor.cpp  reversed_dfs_visitor.hpp  rocm.cpp  rocm.hpp
src/nnfusion/engine/pass/: CMakeLists.txt  codegenerator.cpp  codegenerator.h  codegenerator.hpp  codegenerator_helper.cpp  codegenerator_helper.hpp  cpu_codegenerator.cpp  cpu_codegenerator.hpp  create_fusion_block.cpp  create_fusion_block.hpp  cuda_codegenerator.cpp  cuda_codegenerator.hpp  device_dispatcher.cpp  device_dispatcher.hpp  elementwise_kernel_fusion.cpp  elementwise_kernel_fusion.hpp  extract_function_signature.cpp  extract_function_signature.h  extract_function_signature.hpp  extract_graph_signature.cpp  extract_graph_signature.hpp  kernel_selection.cpp  kernel_selection.hpp  ngraph_function_pass.cpp  ngraph_function_pass.h  ngraph_function_pass.hpp  rocm_codegenerator.cpp  rocm_codegenerator.hpp
src/nnfusion/engine/profiler/: CMakeLists.txt  binary_utils.cpp  cpu_runtime.cpp  cpu_runtime.hpp  cuda_runtime.cpp  cuda_runtime.hpp  profiler.cpp  profiler.hpp  profiling_runtime.cpp  profiling_runtime.hpp  rocm_runtime.cpp  rocm_runtime.hpp
src/nnfusion/frontend/: CMakeLists.txt  base.hpp  frontend_base.hpp
src/nnfusion/frontend/onnx_import/: CMakeLists.txt  exceptions.hpp  onnx.cpp  onnx.hpp  onnx_base.cpp  onnx_base.hpp  ops_bridge.cpp  ops_bridge.hpp
src/nnfusion/frontend/onnxifi/: backend.hpp  backend_manager.cpp  backend_manager.hpp
src/nnfusion/frontend/tensorflow_import/: CMakeLists.txt  tensorflow.cpp  tensorflow.hpp  tensorflow_base.hpp
src/nnfusion/frontend/torchscript_import/: CMakeLists.txt  (+4 more)
test/: CMakeLists.txt  nnfusion_backend.cpp  tensorflow_import.cpp
test/ngraph/: CMakeLists.txt  pass_op_inplace.cpp  tensorflow_import.cpp
test/nnfusion/: CMakeLists.txt
test/nnfusion/core/: graph_pass.cpp  interpreter.cpp  ir.cpp  kernel_emitter.cpp  pass_kernel_inplace.cpp  pass_op_inplace.cpp  tagable.cpp
test/nnfusion/cuda_op/: avg_pool.cpp  batchnorm.cpp  broadcast.cpp  concat.cpp  constant_navie.cpp  convolution.cpp  max_pool.cpp  pad.cpp  reshape.cpp  result.cpp  slice.cpp  softmax.cpp  sum.cpp
test/nnfusion/engine/: autodiff.cpp  profiler.cpp
test/nnfusion/frontend/: onnx_import.cpp  tensorflow_import.cpp  torchscript_import.cpp
test/nnfusion/inventory/: abs.cpp  add.cpp  and.cpp  anyop.cpp  arg_max.cpp  arg_min.cpp  avg_pool.cpp  batchnorm.cpp  broadcast.cpp  ceiling.cpp  concat.cpp  convert.cpp  convolution.cpp  divide.cpp  dot.cpp  equal.cpp  floor.cpp  greater.cpp  greater_eq.cpp  less.cpp  less_eq.cpp  max.cpp  max_pool.cpp  maximum.cpp  min.cpp  minimum.cpp  multiply.cpp  negative.cpp  noop.cpp  not.cpp  not_equal.cpp  one_hot.cpp  or.cpp  pad.cpp  product.cpp  relu.cpp  relu_backprop.cpp  replace_slice.cpp  reshape.cpp  reverse.cpp  (+7 more)
test/nnfusion/kernels/: addn.cpp  apply_momentum.cpp  batch_test.cpp  depthwise_conv2d.cpp  dynamic_stitch.cpp  invert_permutation_test.cpp  sample.cpp  sparse_apply_momentum.cpp  strided_slice_grad.cpp  tile.cpp  unsorted_segment_sum.cpp
test/nnfusion/op/: avg_pool.cpp  broadcast.cpp  concat.cpp  constant.cpp  max_pool.cpp  pad.cpp  reshape.cpp  result.cpp  sum.cpp
test/nnfusion/scripts/: config.json  e2e_evaluator.py  e2e_tests.py  e2e_tests_tfmodels_bert_train.py  e2e_tests_tfmodels_bert_train_rocm.py  e2e_tests_tfmodels_cuda.py  e2e_tests_tfmodels_rocm.py  e2e_trace_diff.py
test/nnfusion/test_util/: all_close.cpp  all_close.hpp  common.hpp  inventory.hpp  library.cpp  library.hpp
test/util/: test_tools.cpp  test_tools.hpp
(+937 files in other folders)
